* Makefile.in (objfiles_h): Add $(bcache_h). * objfiles.h: Include "bcache.h".
* Makefile.in (symtab_h): Remove $(bcache_h).
* symtab.h: Do not include "bcache.h".

--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -624,7 +624,7 @@ language_h =	language.h
 linespec_h =	linespec.h
 memattr_h =     memattr.h
 monitor_h =	monitor.h
-objfiles_h =	objfiles.h
+objfiles_h =	objfiles.h $(bcache_h)
 parser_defs_h =	parser-defs.h $(doublest_h)
 regcache_h =	regcache.h
 remote_h =	remote.h
@@ -635,7 +635,7 @@ solist_h =	solist.h
 source_h =	source.h
 stabsread_h =	stabsread.h
 symfile_h =	symfile.h
-symtab_h =	symtab.h $(bcache_h)
+symtab_h =	symtab.h
 target_h =      target.h $(bfd_h) $(symtab_h) $(dcache_h) $(memattr_h)
 terminal_h =	terminal.h
 top_h =		top.h
