--- a/newlib/libc/sys/linux/Makefile.am
+++ b/newlib/libc/sys/linux/Makefile.am
@@ -166,7 +166,7 @@ endif
 
 # This will handle both /usr/src/linux-2.4/include/asm/signal.h (in Red Hat Linux 7.1)
 # and also /usr/src/linux/include/asm/signal.h in older versions of Red Hat Linux
-SIGNAL_H = /usr/src/$(shell ls /usr/src/ | grep ^linux | head -n 1)/include/asm/signal.h
+SIGNAL_H = /usr/include/asm/signal.h
 
 liblinux_la_LDFLAGS = -Xcompiler -nostdlib
 
@@ -230,7 +230,8 @@ machine/crt0.o: ; @true
 sig.$(oext):	siglist.inc
 
 siglist.inc:
-		$(AWK) '/#define.SIG.*[1-9][0-9]*/ { n[$$3] = $$2 } \
+		$(AWK) '{ max = 32 } \
+		  /#define.SIG.*[1-9][0-9]*/ { n[$$3] = $$2 } \
 		  /#define.NSIG.*[1-9][0-9]*/ { max = $$3 } \
 		  /#define.SIGUNUSED/ \
 		    { for (i = 0; i <= max; i++) print "\"" n[i] "\"," }' \
