--- a/libgloss/arm/Makefile.in
+++ b/libgloss/arm/Makefile.in
@@ -47,8 +47,10 @@ OBJCOPY = `if [ -f ${objroot}/../binutils/objcopy ] ; \
 	then echo ${objroot}/../binutils/objcopy ; \
 	else t='$(program_transform_name)'; echo objcopy | sed -e $$t ; fi`
 
-CRT0		= crt0.o
-CRT0_INSTALL	= install-crt0
+@BUILD_CRT0_TRUE@CRT0		= crt0.o
+@BUILD_CRT0_TRUE@CRT0_INSTALL	= install-crt0
+@BUILD_CRT0_FALSE@CRT0		= 
+@BUILD_CRT0_FALSE@CRT0_INSTALL	= 
 
 REDBOOT_CRT0	= redboot-crt0.o 
 REDBOOT_OBJS	= redboot-syscalls.o
