--- a/newlib/libc/machine/h8300/Makefile.am
+++ b/newlib/libc/machine/h8300/Makefile.am
@@ -7,7 +7,7 @@ INCLUDES = $(NEWLIB_CFLAGS) $(CROSS_CFLAGS) $(TARGET_CFLAGS)
 noinst_LIBRARIES = lib.a
 
 lib_a_SOURCES = reg_memcpy.S reg_memset.S strcmp.S memcpy.S memset.S \
-	setjmp.S
+	setjmp.S h8sx_strcpy.S
 lib_a_LIBADD = 
 lib_a_DEPENDENCIES = 
 
