--- a/newlib/libc/machine/h8300/Makefile.in
+++ b/newlib/libc/machine/h8300/Makefile.in
@@ -89,7 +89,7 @@ INCLUDES = $(NEWLIB_CFLAGS) $(CROSS_CFLAGS) $(TARGET_CFLAGS)
 
 noinst_LIBRARIES = lib.a
 
-lib_a_SOURCES = reg_memcpy.S reg_memset.S strcmp.S memcpy.S memset.S 	setjmp.S
+lib_a_SOURCES = reg_memcpy.S reg_memset.S strcmp.S memcpy.S memset.S 	setjmp.S h8sx_strcpy.S
 
 lib_a_LIBADD = 
 lib_a_DEPENDENCIES = 
@@ -106,7 +106,7 @@ DEFS = @DEFS@ -I. -I$(srcdir)
 CPPFLAGS = @CPPFLAGS@
 LIBS = @LIBS@
 lib_a_OBJECTS =  reg_memcpy.o reg_memset.o strcmp.o memcpy.o memset.o \
-setjmp.o
+setjmp.o h8sx_strcpy.o
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
