--- a/libgloss/libnosys/Makefile.in
+++ b/libgloss/libnosys/Makefile.in
@@ -66,7 +66,7 @@ OBJCOPY = `if [ -f ${objroot}/../binutils/objcopy ] ; \
 # object files needed
 OBJS = close.o environ.o errno.o execve.o fork.o fstat.o getpid.o gettod.o \
 	isatty.o kill.o link.o lseek.o open.o read.o sbrk.o stat.o \
-	times.o unlink.o wait.o write.o
+	times.o unlink.o wait.o write.o _exit.o
 
 # Object files specific to particular targets.
 EVALOBJS = ${OBJS}
