--- a/libgloss/libnosys/Makefile.in
+++ b/libgloss/libnosys/Makefile.in
@@ -10,6 +10,7 @@
 # the new terms are clearly indicated on the first page of each file where
 # they apply.
 
+DESTDIR =
 VPATH = @srcdir@
 srcdir = @srcdir@
 objdir = .
@@ -129,8 +130,8 @@ distclean maintainer-clean realclean: clean
 .PHONY: install info install-info clean-info
 install:
 	@for outputs in ${OUTPUTS}; do\
-	 mkdir -p $(tooldir)/lib${MULTISUBDIR}; \
-	 $(INSTALL_PROGRAM) $${outputs} $(tooldir)/lib${MULTISUBDIR}; \
+	 mkdir -p $(DESTDIR)$(tooldir)/lib${MULTISUBDIR}; \
+	 $(INSTALL_PROGRAM) $${outputs} $(DESTDIR)$(tooldir)/lib${MULTISUBDIR}; \
 	done
 
 info:
