--- a/libgloss/pa/Makefile.in
+++ b/libgloss/pa/Makefile.in
@@ -10,6 +10,7 @@
 # the new terms are clearly indicated on the first page of each file where
 # they apply.
 #
+DESTDIR =
 VPATH = @srcdir@
 srcdir = @srcdir@
 objdir = .
@@ -128,13 +129,13 @@ distclean maintainer-clean realclean: clean
 
 .PHONY: install info install-info clean-info
 install:
-	$(INSTALL_PROGRAM) $(CRT0) $(tooldir)/lib${MULTISUBDIR}/$(CRT0)
+	$(INSTALL_PROGRAM) $(CRT0) $(DESTDIR)$(tooldir)/lib${MULTISUBDIR}/$(CRT0)
 	# install Oki stuff
-	$(INSTALL_PROGRAM) $(OKI_BSP) $(tooldir)/lib${MULTISUBDIR}/$(OKI_BSP)
-	$(INSTALL_DATA) ${srcdir}/op50n.ld $(tooldir)/lib${MULTISUBDIR}/op50n.ld
+	$(INSTALL_PROGRAM) $(OKI_BSP) $(DESTDIR)$(tooldir)/lib${MULTISUBDIR}/$(OKI_BSP)
+	$(INSTALL_DATA) ${srcdir}/op50n.ld $(DESTDIR)$(tooldir)/lib${MULTISUBDIR}/op50n.ld
 	# install WinBond stuff
-	$(INSTALL_PROGRAM) $(WEC_BSP) $(tooldir)/lib${MULTISUBDIR}/$(WEC_BSP)
-	$(INSTALL_DATA) ${srcdir}/w89k.ld $(tooldir)/lib${MULTISUBDIR}/w89k.ld
+	$(INSTALL_PROGRAM) $(WEC_BSP) $(DESTDIR)$(tooldir)/lib${MULTISUBDIR}/$(WEC_BSP)
+	$(INSTALL_DATA) ${srcdir}/w89k.ld $(DESTDIR)$(tooldir)/lib${MULTISUBDIR}/w89k.ld
 
 info:
 install-info:
