2004-06-30  Kees Zeelenberg  <kzlg@users.sourceforge.net>             Danny Smith  <dannysmith@users.sourceforge.net>
	* include/stdio.h (fopen64): Add inline function.
	(fseeko64): Add prototype.
	(ftello64): Add inline function.
	* include/io.h (lseek64): Add inline function.
	* include/sys/types (off64_t): Add typedef.
	(fpos64_t): Add typedef.
        * mingwex/fopen64.c: New file.
        * mingwex/fseeko64.c: New file.
        * mingwex/ftello64.c: New file.
        * mingwex/lseek64.c: New file.
	* mingwex/Makefile.in (STDIO_DISTFILES): Add fopen64.c,
	fseeko.64.c, ftello64.c, lseek64.c.
	(STDIO_OBJS): Add fopen64.o, fseeko.64.o, ftello64.o, lseek64.o.

2004-06-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (__mingw_fseeko64): Add prototype.
	* mingwex/mingw-fseek.c (__mingw_fseeko64): Add definition.
	(__mingw_fwrite): Handle huge files.

--- a/winsup/mingw/mingwex/Makefile.in
+++ b/winsup/mingw/mingwex/Makefile.in
@@ -62,6 +62,7 @@ MATH_DISTFILES = \
 	tgammaf.c tgammal.c trunc.c truncf.c truncl.c
 
 STDIO_DISTFILES = \
+	fopen64.c fseeko64.c ftello64.c lseek64.c \
 	snprintf.c snwprintf.c vsnprintf.c vsnwprintf.c \
 	vfscanf.c vfwscanf.c vscanf.c vsscanf.c vswscanf.c vwscanf.c
 
@@ -113,6 +114,7 @@ STDLIB_STUB_OBJS = \
 	strtof.o wcstof.o \
 	_Exit.o
 STDIO_OBJS = \
+	fopen64.o fseeko64.o ftello64.o lseek64.o \
 	snprintf.o  vsnprintf.o snwprintf.o vsnwprintf.o \
 	vfscanf.o vfwscanf.o vscanf.o vsscanf.o vswscanf.o vwscanf.o
 MATH_OBJS = \
