2004-07-05  Jeff Johnston  <jjohnstn@redhat.com>
        * libc/Makefile.am (libc.dvi): Add target and specify
        same dependencies as libc.info.
        * libc/Makefile.in: Regenerated.
        * libm/Makefile.am (libm.dvi): Add target and specify
        same dependencies as libm.info.
        * libm/Makefile.in: Regenerated.

--- a/newlib/libc/Makefile.am
+++ b/newlib/libc/Makefile.am
@@ -134,6 +134,9 @@ SUBDEFS = \
 libc.info: sigset.texi extra.texi stdio64.texi iconvset.texi \
 	targetdep.tex $(SUBDEFS)
 
+libc.dvi: sigset.texi extra.texi stdio64.texi iconvset.texi \
+	targetdep.tex $(SUBDEFS)
+
 stmp-sigset: config.status
 	if test -n "$(LIBC_SIGNAL_LIB)"; then \
 	  echo "@set SIGNALS" >tmp.texi; \
