--- a/newlib/libm/Makefile.in
+++ b/newlib/libm/Makefile.in
@@ -604,6 +604,8 @@ $(SUBLIBS):
 
 libm.info: targetdep.tex math/stmp-def
 
+libm.dvi: targetdep.tex math/stmp-def
+
 stmp-targetdep: force
 	rm -f tmp.texi
 	targetdoc=`pwd`/tmp.texi; \
