--- a/newlib/libc/Makefile.in
+++ b/newlib/libc/Makefile.in
@@ -652,6 +652,9 @@ sys/crt0.o: ; @true
 libc.info: sigset.texi extra.texi stdio64.texi iconvset.texi \
 	targetdep.tex $(SUBDEFS)
 
+libc.dvi: sigset.texi extra.texi stdio64.texi iconvset.texi \
+	targetdep.tex $(SUBDEFS)
+
 stmp-sigset: config.status
 	if test -n "$(LIBC_SIGNAL_LIB)"; then \
 	  echo "@set SIGNALS" >tmp.texi; \
