--- a/winsup/mingw/mingwex/Makefile.in
+++ b/winsup/mingw/mingwex/Makefile.in
@@ -29,8 +29,8 @@ DISTFILES = Makefile.in configure configure.in \
 	_Exit.c atoll.c dirent.c feclearexcept.c fegetenv.c \
 	fegetexceptflag.c fegetround.c feholdexcept.c feraiseexcept.c \
 	fesetenv.c fesetexceptflag.c fesetround.c fetestexcept.c \
-	feupdateenv.c fwide.c  getopt.c imaxabs.c imaxdiv.c ldtoa.c \
-	lltoa.c lltow.c mbsinit.c mingw-fseek.c sitest.c strtof.c \
+	feupdateenv.c ftruncate.c fwide.c  getopt.c imaxabs.c imaxdiv.c \
+	ldtoa.c lltoa.c lltow.c mbsinit.c mingw-fseek.c sitest.c strtof.c \
 	strtoimax.c strtold.c strtoumax.c testwmem.c ulltoa.c ulltow.c \
 	wcstof.c wcstoimax.c wcstold.c wcstoumax.c wdirent.c wmemchr.c \
 	wmemcmp.c wmemcpy.c wmemmove.c wmemset.c wtoll.c
@@ -147,7 +147,7 @@ FENV_OBJS = fesetround.o  fegetround.o \
 	feclearexcept.o feholdexcept.o fegetexceptflag.o \
 	feraiseexcept.o fetestexcept.o fesetexceptflag.o
 POSIX_OBJS = \
-	dirent.o wdirent.o getopt.o
+	dirent.o wdirent.o getopt.o ftruncate.o
 REPLACE_OBJS = \
 	mingw-fseek.o
 COMPLEX_OBJS = \
